cmake_minimum_required(VERSION 4.1)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled task1.cpp
        task3.cpp
        task4.cpp
        task5.cpp
        task6.cpp
        task7.cpp
        task8.cpp
        task2.cpp
        task9.cpp
        task10.cpp
        task11.cpp
        task12.cpp
        task13.cpp
        task14.cpp
        task15.cpp
        test.cpp
)
